<resources>
    <string name="app_name">GitHub Browser</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="user_profile">User profile</string>
    <string name="repositories">Repositories</string>
    <string name="repositories_count">Repositories (%d)</string>
    <string name="stars">Stars</string>
    <string name="stars_count">%d stars</string>
    <string name="starred">Starred</string>
    <string name="following">Following</string>
    <string name="following_count">Following (%d)</string>
    <string name="followers">Followers</string>
    <string name="followers_count">Followers (%d)</string>
    <string name="avatar">avatar</string>
    <string name="nothing_to_see_here">Nothing to see here.</string>
    <string name="no_connection">No internet connection detected. Please check your network and try again.</string>
    <string name="users">Users</string>
    <string name="repo_profile">Repo profile</string>
    <string name="watchers">Watchers</string>
    <string name="watchers_count">%d watchers</string>
    <string name="forks">Forks</string>
    <string name="forks_count">%d forks</string>
    <string name="star">Star</string>
    <string name="unstar">Unstar</string>
    <string name="contributors">Contributors</string>
    <string name="contributions_count">%d contributions</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="sorry_to_see_you_go">Sorry to see you go</string>
    <string name="own">Own</string>
    <string name="follow">Follow</string>
    <string name="follow_info">%s following - %s followers</string>
    <string name="find_your_stuff">Find your stuff</string>
    <string name="search_people_and_repos">Search all of GitHub for People and Repositories</string>
    <string name="search_repositories">Search Repositories for \"%s\"</string>
    <string name="search_people">Search People for \"%s\"</string>
    <string name="owner">Owner</string>
</resources>
